// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeViews CodeStatusbar displays no statusBarMessage 1`] = `
<div>
  <div
    class="sc-eHgmQL ALSTw"
  >
    <div
      class="sc-caSCKo dBwEvm"
    />
  </div>
</div>
`;

exports[`CodeViews CodeStatusbar displays statusBarMessage 1`] = `
<div>
  <div
    class="sc-eHgmQL ALSTw"
  >
    <div
      class="sc-caSCKo dBwEvm"
    >
      Started streaming 1 records after 5 ms and completed after 10  ms.
    </div>
  </div>
</div>
`;

exports[`CodeViews CodeView displays nothing if not successful query 1`] = `<div />`;

exports[`CodeViews CodeView displays request and response info if successful query 1`] = `
<div>
  <div
    class="sc-bZQynM bblfwJ"
  >
    <table
      class="sc-bRBYWo eaCMQw"
    >
      <tbody
        class="sc-hzDkRC cQdbyR"
      >
        <tr
          class="sc-fBuWsC gyJlGD"
        >
          <td
            class="sc-fMiknA bVjRtJ"
          >
            Server version
          </td>
          <td
            class="sc-dVhcbM fghLuF"
          >
            xx1
          </td>
        </tr>
        <tr
          class="sc-fBuWsC gyJlGD"
        >
          <td
            class="sc-fMiknA bVjRtJ"
          >
            Server address
          </td>
          <td
            class="sc-dVhcbM fghLuF"
          >
            xx2
          </td>
        </tr>
        <tr
          class="sc-fBuWsC gyJlGD"
        >
          <td
            class="sc-fMiknA bVjRtJ"
          >
            Query
          </td>
          <td
            class="sc-dVhcbM fghLuF"
          >
            MATCH xx0
          </td>
        </tr>
        <tr
          class="sc-fBuWsC gyJlGD"
        >
          <td
            class="sc-fMiknA bVjRtJ"
          >
            Summary
            <div
              class="fa fa-caret-right sc-jhAzac ZehGm"
              title="Expand section"
            />
          </td>
          <td
            class="sc-dVhcbM fghLuF"
          >
            {,  "server": {,    "version": "xx1", ...
          </td>
        </tr>
        <tr
          class="sc-fBuWsC gyJlGD"
        >
          <td
            class="sc-fMiknA bVjRtJ"
          >
            Response
            <div
              class="fa fa-caret-right sc-jhAzac ZehGm"
              title="Expand section"
            />
          </td>
          <td
            class="sc-dVhcbM fghLuF"
          >
            [,  {,    "res": "xx3" ...
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
